name:                cardano-wallet-byron
version:             2020.7.6
synopsis:            Wallet backend protocol-specific bits implemented using byron nodes
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , aeson
    , async
    , base58-bytestring
    , bytestring
    , cardano-addresses
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-ledger
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cborg
    , containers
    , contra-tracer
    , directory
    , either
    , extra
    , exceptions
    , filepath
    , fmt
    , generic-lens
    , io-sim-classes
    , iohk-monitoring
    , memory
    , network
    , network-mux
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-network
    , ouroboros-network-framework
    , process
    , retry
    , servant-server
    , temporary
    , text
    , text-class
    , time
    , transformers
    , unordered-containers
    , warp
    , yaml
    , Win32-network
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Byron
      Cardano.Wallet.Byron.Api.Server
      Cardano.Wallet.Byron.Compatibility
      Cardano.Wallet.Byron.Network
      Cardano.Wallet.Byron.Transaction
      Cardano.Wallet.Byron.Transaction.Size
      Cardano.Wallet.Byron.Launch

executable cardano-wallet-byron
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , cardano-wallet-byron
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , contra-tracer
    , iohk-monitoring
    , network
    , optparse-applicative
    , text
    , text-class
    , transformers
  hs-source-dirs:
      exe
  main-is:
    cardano-wallet-byron.hs

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-wallet-byron
    , cardano-wallet-core
    , cborg
    , containers
    , fmt
    , hspec
    , memory
    , ouroboros-consensus-byron
    , ouroboros-network
    , QuickCheck
    , text
    , transformers
  build-tools:
      hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.Byron.CompatibilitySpec
      Cardano.Wallet.Byron.TransactionSpec

test-suite integration
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , aeson
    , async
    , bytestring
    , cardano-addresses
    , cardano-wallet-byron
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , command
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , temporary
    , text
  build-tools:
      cardano-wallet-byron
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/integration
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.Byron.Faucet
      Test.Integration.Byron.Scenario.API.Transactions
      Test.Integration.Byron.Scenario.API.Migrations
      Test.Integration.Byron.Scenario.CLI.Transactions

benchmark restore
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , bytestring
    , cardano-addresses
    , cardano-wallet-core
    , optparse-applicative
    , cardano-wallet-byron
    , cardano-wallet-launcher
    , ouroboros-network
    , contra-tracer
    , containers
    , criterion-measurement
    , cryptonite
    , deepseq
    , digest
    , filepath
    , fmt
    , iohk-monitoring
    , persistent
    , persistent-template
    , process
    , say
    , temporary
    , text
    , time
    , transformers
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Restore.hs
  other-modules:
      Cardano.Wallet.Primitive.AddressDiscovery.Any
      Cardano.Wallet.Primitive.AddressDiscovery.Any.TH

benchmark latency
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
     base
   , aeson
   , async
   , cardano-wallet-cli
   , cardano-wallet-core
   , cardano-wallet-core-integration
   , cardano-wallet-byron
   , cardano-wallet-launcher
   , cardano-wallet-test-utils
   , fmt
   , generic-lens
   , http-client
   , http-types
   , hspec
   , iohk-monitoring
   , stm
   , temporary
   , text
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      bench
      test/integration
  main-is:
      Latency.hs
  other-modules:
      Cardano.Wallet.Byron.Faucet
