cabal-version:      3.4
name:               cardano-api-extra
version:            2024.5.5
synopsis:           Useful extensions to the Cardano API.
description:        Please see README.md.
homepage:           https://github.com/cardano-foundation/cardano-wallet
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2018-2022 IOHK, 2023 Cardano Foundation
license:            Apache-2.0
category:           Blockchain, Cardano, Testing
build-type:         Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-crypto-test
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-byron-test
    , cardano-ledger-core
    , cardano-ledger-core:testlib
    , cardano-ledger-shelley
    , cardano-ledger-conway:testlib
    , cardano-strict-containers
    , cardano-wallet-test-utils
    , containers
    , hedgehog-quickcheck
    , int-cast
    , iproute
    , network
    , plutus-ledger-api:plutus-ledger-api-testlib
    , QuickCheck
    , quickcheck-instances
    , random
    , text
  exposed-modules:
    Cardano.Api.Gen
    Cardano.Ledger.Credential.Safe

