cabal-version: 3.4
name:          cardano-api-extra
version:       0.2025.3.4
synopsis:      Useful extensions to the Cardano API.
description:   Please see README.md.
homepage:      https://github.com/cardano-foundation/cardano-wallet
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2018-2022 IOHK, 2023 Cardano Foundation
license:       Apache-2.0
category:      Blockchain, Cardano, Testing
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-api                                  >=10.8.0.0 && <10.9
    , cardano-binary                               >=1.7.1.0  && <1.8
    , cardano-crypto-class                         >=2.1.5.0  && <2.2
    , cardano-crypto-test                          >=1.5.0.2  && <1.6
    , cardano-ledger-alonzo                        >=1.12.0.0 && <1.13
    , cardano-ledger-api                           >=1.10.0.0 && <1.11
    , cardano-ledger-byron-test                    >=1.5.2.0  && <1.6
    , cardano-ledger-conway:testlib                >=1.18.1.0 && <1.19
    , cardano-ledger-core                          >=1.16.0.0 && <1.17
    , cardano-ledger-core:testlib
    , cardano-ledger-shelley                       >=1.15.0.0 && <1.16
    , cardano-strict-containers                    >=0.1.3.0  && <0.2
    , cardano-wallet-test-utils
    , containers
    , hedgehog-quickcheck
    , int-cast
    , iproute
    , network
    , ordered-containers
    , plutus-ledger-api:plutus-ledger-api-testlib  >=1.37.0.0 && <1.38
    , QuickCheck
    , quickcheck-instances
    , random
    , text

  exposed-modules:
    Cardano.Api.Gen
    Cardano.Ledger.Credential.Safe
