cabal-version:       3.0
name:                cardano-wallet-cli
version:             2022.1.18
synopsis:            Utilities for a building Command-Line Interfaces
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wunused-packages

  if (flag(release))
    ghc-options:       -O2 -Werror

  build-depends: base >= 4.14 && < 4.15

common exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

library
  import: project-config
  build-depends:
      aeson
    , aeson-pretty
    , ansi-terminal
    , bytestring
    , cardano-addresses
    , cardano-addresses-cli
    , cardano-wallet-core
    , directory
    , filepath
    , fmt
    , http-client
    , iohk-monitoring
    , optparse-applicative
    , servant-client
    , servant-client-core
    , text
    , cardano-wallet-text-class
    , time
    , unliftio
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.CLI

test-suite unit
  import: project-config, exe
  build-depends:
      cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-test-utils
    , containers
    , filepath
    , hspec
    , optparse-applicative
    , QuickCheck
    , text
    , cardano-wallet-text-class
    , unliftio
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
      test/data
  main-is:
      cli-unit-test.hs
  other-modules:
      Cardano.CLISpec
