name:                cardano-wallet-cli
version:             2021.7.30
synopsis:            Utilities for a building Command-Line Interfaces
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options:
      -Werror
  build-depends:
      aeson
    , aeson-pretty
    , ansi-terminal
    , base
    , bytestring
    , cardano-addresses
    , cardano-addresses-cli
    , cardano-wallet-core
    , directory
    , filepath
    , fmt
    , http-client
    , iohk-monitoring
    , optparse-applicative
    , servant-client
    , servant-client-core
    , text
    , text-class
    , time
    , unliftio
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.CLI

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-test-utils
    , containers
    , filepath
    , hspec
    , optparse-applicative
    , QuickCheck
    , text
    , text-class
    , unliftio
  build-tools:
      hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Cardano.CLISpec
