cabal-version:      2.2
name:               cardano-coin-selection
version:            2023.4.14
synopsis:           Coin selection algorithms for the Cardano blockchain.
description:        Please see README.md.
homepage:           https://github.com/input-output-hk/cardano-wallet
author:             IOHK Engineering Team
maintainer:         operations@iohk.io
copyright:          2018-2022 IOHK
license:            Apache-2.0
category:           Blockchain, Cardano
build-type:         Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib

  build-depends:
    , base
    , cardano-numeric
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , containers
    , exact-combinatorics
    , extra
    , fmt
    , generic-lens
    , generics-sop
    , int-cast
    , lattices
    , math-functions
    , MonadRandom
    , QuickCheck
    , transformers

  exposed-modules:
    Cardano.CoinSelection
    Cardano.CoinSelection.Balance
    Cardano.CoinSelection.Balance.Gen
    Cardano.CoinSelection.Collateral
    Cardano.CoinSelection.Context

test-suite test
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/data test/spec
  main-is:            run-test-suite.hs
  build-depends:
    , base
    , bytestring
    , cardano-coin-selection
    , cardano-numeric
    , cardano-wallet-launcher
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , containers
    , fmt
    , generic-lens
    , generics-sop
    , hspec
    , hspec-core
    , int-cast
    , lattices
    , pretty-simple
    , QuickCheck
    , quickcheck-classes
    , quickcheck-quid
    , safe
    , text
    , transformers

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Cardano.CoinSelection.BalanceSpec
    Cardano.CoinSelection.CollateralSpec
    Cardano.CoinSelectionSpec
    Spec
