cabal-version:      2.2
name:               cardano-coin-selection
version:            0.2025.1.9
synopsis:           Coin selection algorithms for the Cardano blockchain.
description:        Please see README.md.
homepage:           https://github.com/cardano-foundation/cardano-wallet
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2018-2022 IOHK, 2023 Cardano Foundation
license:            Apache-2.0
category:           Blockchain, Cardano
build-type:         Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib

  build-depends:
    , base >= 4.14 && < 5
    , cardano-numeric
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , containers >= 0.5 && < 0.8
    , deepseq >= 1.4.4 && < 1.6
    , exact-combinatorics >= 0.2 && < 0.3
    , generic-lens >= 2.2.2.0 && < 2.3
    , generics-sop >= 0.5.1.4 && < 0.6
    , int-cast >= 0.2.0.0 && < 0.3
    , lattices >= 2.2 && < 2.3
    , math-functions >= 0.3.4.4 && < 0.4
    , MonadRandom >= 0.6 && < 0.7
    , monoid-subclasses >= 1.2.5.1 && < 1.3
    , monoidmap >= 0.0.1.6 && < 0.1
    , QuickCheck >= 2.14 && < 2.16
    , transformers >= 0.6.1.0 && < 0.7

  exposed-modules:
    Cardano.CoinSelection
    Cardano.CoinSelection.Balance
    Cardano.CoinSelection.Balance.Gen
    Cardano.CoinSelection.Collateral
    Cardano.CoinSelection.Context
    Cardano.CoinSelection.Size
    Cardano.CoinSelection.UTxOIndex
    Cardano.CoinSelection.UTxOIndex.Gen
    Cardano.CoinSelection.UTxOIndex.Internal
    Cardano.CoinSelection.UTxOSelection
    Cardano.CoinSelection.UTxOSelection.Gen

test-suite test
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/spec
  main-is:            run-test-suite.hs
  build-depends:
    , base
    , bytestring >= 0.10.6 && < 0.13
    , cardano-coin-selection
    , cardano-numeric
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , containers
    , fmt >= 0.6.3 && < 0.7
    , generic-lens
    , generics-sop
    , hspec >= 2.11.0 && < 2.12
    , hspec-core
    , int-cast
    , lattices
    , MonadRandom
    , monoid-subclasses
    , pretty-simple >= 4.1.2.0 && < 4.2
    , QuickCheck
    , quickcheck-classes >= 0.6.5 && < 0.7
    , quickcheck-quid >= 0.0.1.5 && < 0.1
    , safe >= 0.3.19 && < 0.4
    , text >= 1.2 && < 2.2
    , transformers >= 0.6.1.0 && < 0.7
    , with-utf8 >= 1.1.0 && < 1.2 
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Cardano.CoinSelection.BalanceSpec
    Cardano.CoinSelection.CollateralSpec
    Cardano.CoinSelection.UTxOIndexSpec
    Cardano.CoinSelection.UTxOSelectionSpec
    Cardano.CoinSelectionSpec
    Spec
    SpecHook

benchmark utxo-index
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        bench
    main-is:
        UTxOIndexBench.hs
    build-depends:
      , base
      , cardano-coin-selection
      , cardano-wallet-primitive
      , cardano-wallet-test-utils
      , containers
      , deepseq
      , format-numbers >= 0.1.0.1 && < 0.2
      , QuickCheck
      , tasty-bench >= 0.4 && < 0.5
      , text
