cabal-version: 3.0
name:          cardano-wallet-conversions
version:       2023.7.18
synopsis:      Miscellaneous conversion functions.
description:   Please see README.md.
homepage:      https://github.com/cardano-foundation/cardano-wallet
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2018-2022 IOHK, 2023 Cardano Foundation
license:       Apache-2.0
category:      Blockchain, Cardano
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , base
    , bytestring
    , cardano-addresses
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-slotting
    , cardano-strict-containers
    , cardano-wallet-primitive
    , containers
    , fmt
    , generic-lens
    , int-cast
    , ouroboros-consensus-cardano

  exposed-modules:

-- Cardano.Wallet.Shelley.Compatibility.Ledger

test-suite test
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/spec
  main-is:            run-test-suite.hs
  build-depends:
    , base
    , bytestring
    , cardano-addresses
    , cardano-ledger-allegra:{cardano-ledger-allegra, testlib}
    , cardano-wallet-conversions
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , hspec
    , hspec-core
    , ouroboros-consensus-cardano
    , QuickCheck
    , with-utf8

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Spec
    SpecHook

-- Cardano.Wallet.Shelley.Compatibility.LedgerSpec
