name:                cardano-wallet-core-integration
version:             2020.12.21
synopsis:            Core integration test library.
description:         Shared core functionality for our integration test suites.
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
  if (flag(release))
    ghc-options:
      -Werror
  build-depends:
      HUnit
    , QuickCheck
    , aeson
    , aeson-qq
    , base
    , base58-bytestring
    , bech32
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , cardano-transactions
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , cborg
    , command
    , containers
    , criterion-measurement
    , cryptonite
    , deepseq
    , directory
    , extra
    , filepath
    , fmt
    , generic-lens
    , hspec
    , hspec-expectations-lifted
    , http-api-data
    , http-client
    , http-types
    , iohk-monitoring
    , lens-aeson
    , memory
    , optparse-applicative
    , process
    , resourcet
    , retry
    , say
    , scrypt
    , template-haskell
    , text
    , text-class
    , time
    , unliftio
    , unliftio-core
  hs-source-dirs:
      src
  exposed-modules:
      Test.Integration.Faucet
      Test.Integration.Framework.Context
      Test.Integration.Framework.DSL
      Test.Integration.Framework.Request
      Test.Integration.Framework.TestData
      Test.Integration.Scenario.API.Byron.Wallets
      Test.Integration.Scenario.API.Byron.HWWallets
      Test.Integration.Scenario.API.Byron.Addresses
      Test.Integration.Scenario.API.Byron.CoinSelections
      Test.Integration.Scenario.API.Byron.Transactions
      Test.Integration.Scenario.API.Byron.Migrations
      Test.Integration.Scenario.API.Byron.Network
      Test.Integration.Scenario.API.Shelley.Addresses
      Test.Integration.Scenario.API.Shelley.CoinSelections
      Test.Integration.Scenario.API.Shelley.HWWallets
      Test.Integration.Scenario.API.Shelley.Network
      Test.Integration.Scenario.API.Shelley.Settings
      Test.Integration.Scenario.API.Shelley.StakePools
      Test.Integration.Scenario.API.Shelley.Transactions
      Test.Integration.Scenario.API.Shelley.Migrations
      Test.Integration.Scenario.API.Shelley.Wallets
      Test.Integration.Scenario.API.Network
      Test.Integration.Scenario.CLI.Byron.Wallets
      Test.Integration.Scenario.CLI.Byron.Addresses
      Test.Integration.Scenario.CLI.Shelley.Addresses
      Test.Integration.Scenario.CLI.Shelley.HWWallets
      Test.Integration.Scenario.CLI.Shelley.Transactions
      Test.Integration.Scenario.CLI.Shelley.Wallets
      Test.Integration.Scenario.CLI.Miscellaneous
      Test.Integration.Scenario.CLI.Network
      Test.Integration.Scenario.CLI.Port
      Cardano.Wallet.TransactionSpecShared
      Cardano.Wallet.LatencyBenchShared
      Cardano.Wallet.BenchShared
