cabal-version:       3.0
name:                cardano-wallet-core-integration
version:             2022.1.18
synopsis:            Core integration test library.
description:         Shared core functionality for our integration test suites.
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
extra-source-files:  extra/Plutus/*.hs extra/Plutus/README.md

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

common base
  build-depends: base >= 4.14 && < 4.15
               , cardano-wallet-base

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wunused-packages

  if (flag(release))
    ghc-options:       -O2 -Werror

common exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

library
  import: base, project-config
  build-depends:
      HUnit
    , aeson
    , aeson-qq
    , base16-bytestring
    , base58-bytestring
    , bech32
    , bech32-th
    , bytestring
    , cardano-api
    , cardano-addresses
    , cardano-api
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , cborg
    , command
    , containers
    , criterion-measurement
    , cryptonite
    , deepseq
    , directory
    , either
    , extra
    , filepath
    , flat
    , fmt
    , generic-lens
    , generic-lens-core
    , hspec
    , hspec-expectations-lifted
    , http-api-data
    , http-client
    , http-types
    , iohk-monitoring
    , lens-aeson
    , memory
    , microstache
    , network-uri
    , optparse-applicative
    , process
    , resourcet
    , retry
    , say
    , scrypt
    , serialise
    , string-interpolate
    , template-haskell
    , text
    , cardano-wallet-text-class
    , time
    , unliftio
    , unliftio-core
    , unordered-containers
  hs-source-dirs:
      src
  exposed-modules:
      Test.Integration.Faucet
      Test.Integration.Framework.Context
      Test.Integration.Framework.DSL
      Test.Integration.Framework.Request
      Test.Integration.Framework.TestData
      Test.Integration.Plutus
      Test.Integration.Scenario.API.Byron.Wallets
      Test.Integration.Scenario.API.Byron.HWWallets
      Test.Integration.Scenario.API.Byron.Addresses
      Test.Integration.Scenario.API.Byron.CoinSelections
      Test.Integration.Scenario.API.Byron.Transactions
      Test.Integration.Scenario.API.Byron.TransactionsNew
      Test.Integration.Scenario.API.Byron.Migrations
      Test.Integration.Scenario.API.Byron.Network
      Test.Integration.Scenario.API.Shelley.Addresses
      Test.Integration.Scenario.API.Shelley.CoinSelections
      Test.Integration.Scenario.API.Shelley.HWWallets
      Test.Integration.Scenario.API.Shelley.Network
      Test.Integration.Scenario.API.Shelley.Settings
      Test.Integration.Scenario.API.Shelley.StakePools
      Test.Integration.Scenario.API.Shelley.Transactions
      Test.Integration.Scenario.API.Shelley.TransactionsNew
      Test.Integration.Scenario.API.Shelley.Migrations
      Test.Integration.Scenario.API.Shelley.Wallets
      Test.Integration.Scenario.API.Shared.Wallets
      Test.Integration.Scenario.API.Shared.Addresses
      Test.Integration.Scenario.API.Network
      Test.Integration.Scenario.CLI.Byron.Wallets
      Test.Integration.Scenario.CLI.Byron.Addresses
      Test.Integration.Scenario.CLI.Shelley.Addresses
      Test.Integration.Scenario.CLI.Shelley.HWWallets
      Test.Integration.Scenario.CLI.Shelley.Transactions
      Test.Integration.Scenario.CLI.Shelley.Wallets
      Test.Integration.Scenario.CLI.Miscellaneous
      Test.Integration.Scenario.CLI.Network
      Test.Integration.Scenario.CLI.Port
      Cardano.Wallet.LatencyBenchShared
      Cardano.Wallet.BenchShared
